# skincare

./: .replit  LICENSE  app.py  label_encoders.pkl  model.py  model_metadata.pkl  multi_model_metadata.pkl  multi_skincare_recommendation_model.pkl  pyproject.toml  replit.nix  requirement.txt  skincare_recommendation_model.pkl  target_label_encoders.pkl
static/: about.css  browse.css  filter.css  filter.js  product.css  styles.css
static/scripts/: browse.js  script.js
templates/: about.html  browse.html  contact.html  filter.html  footer.html  home.html  midnav.html  moisturizer.html  nav.html  products.html  serum.html  sunscreen.html
