[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.1",
    "supabase>=2.15.1",
    "requests>=2.32.3",
    "pandas>=2.3.0",
    "joblib>=1.5.1",
    "numpy>=2.3.1",
    "scikit-learn>=1.7.0",
]
